<resources>
    <string name="app_name">Poster Maker Pro</string>
    <string name="download">Download</string>
    <string name="frame_1">Frame 1</string>
    <string name="frame_2">Frame 2</string>
    <string name="frame_3">Frame 3</string>
    <string name="share">Share</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn’t receive OTP?</string>
    <string name="resend_otp_timer">Resend OTP in %s secs</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_note">Thank you for choosing our App. Your journey to extraordinary designs begins now!</string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="profile">Profile</string>
    <string name="full_name_hint">Full Name</string>
    <string name="e_mail_hint">E-Mail</string>
    <string name="like">Like</string>
    <string name="check_this_poster">Check This Poster</string>
    <string name="search_designs_here">search designs here...</string>
    <string name="save_and_proceed">Save and proceed</string>
    <string name="business_profile">Business Profile</string>
    <string name="business_name_hint">Business Name</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="create_profile">Create Profile</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="notifications">Notifications</string>
    <string name="wallet_npoints">Wallet\nPoints</string>
    <string name="recharge">Recharge</string>
    <string name="transaction_nhistory">Transaction\nHistory</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_profile">My Profile</string>
    <string name="view_edit_business_profiles">View/Edit Business Profiles</string>
    <string name="my_posts">My Posts</string>
    <string name="view_your_saved_posts">View Your Saved Posts</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_terms_and_conditions">Our Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_our_team">Contact Our Team</string>
    <string name="view_our_privacy_policy">View Our Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_from_this_account">Sign Out From This Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="erase_all_of_your_data">Erase All of Your Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="and_you_can_earn_50_points">And you can earn 50 points</string>
    <string name="refer_code">Refer Code</string>
    <string name="rc345667">RC345667</string>
    <string name="refer_now">Refer now</string>
    <string name="select_a_profile_to_continue">Select a Profile to continue:</string>
    <string name="posts">Posts:-</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="or">Or</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_your_subscriptions_history">View your subscriptions history</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_will_be_signed_out">You will be signed out!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="profile_will_be_deleted">Profile will be deleted!</string>
    <string name="profile_deleted">Profile Deleted</string>
    <string name="please_select_logo_image">Please select logo image</string>
    <string name="error">Error!</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="authenticated_successfully">Authenticated Successfully</string>

    <string name="select_language">Select App Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="apply">Apply Selection</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Categories</string>
    <string name="title_profile">Profile</string>
    <string name="custom_nav_title">Custom</string>
    <string name="enter_correct_otp">Enter the correct OTP</string>
    <string name="enter_10_digit_mobile_no">Enter the ten digit mobile number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_mobile_no">Enter your mobile number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="language_settings">Language Settings</string>
    <string name="change_app_language">Change App Language</string>
    <string name="address_hint">Address</string>
    <string name="profile_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="post_will_be_downloaded_and_added_on_the_home_screen_nthis_action_is_irreversible">Post will be downloaded and added on the home-screen.\nThis action is irreversible!</string>
    <string name="download_it">Download it!</string>
    <string name="share_it">Share it..</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="please_turn_on_your_internet_if_problem_persists_try_after_some_time">Please turn on your internet.If problem persists,try after some time.</string>
    <string name="retry">Retry</string>
    <string name="no_profiles_added">No Profiles Added!</string>
    <string name="you_can_add_new_profiles_with_the_button_below">You can add new profiles with the button below.</string>
    <string name="share_with_our_community">Share With Our Community</string>
    <string name="file_ready" translatable="false">File Is Ready..</string>
    <string name="write_us_a_mail">Let us know your queries</string>
    <string name="no_posters_found">No Posters Found!</string>
    <string name="we_keep_on_adding_new_posters_though_ncheck_later_for_updates">We keep on adding new posters though!\nCheck later for updates.</string>
    <string name="your_business_address">Your Business Address</string>
    <string name="trending_stories">For Today</string>
    <string name="enter_your_email_id">Enter your email id.</string>
    <string name="enter_your_mobile_number">Enter your mobile number.</string>
    <string name="downloaded">Downloaded</string>
    <string name="poster_maker_pro" translatable="false">Poster Maker Pro</string>
    <string name="select_a_frame_first" translatable="false">Select a frame first!</string>


</resources>