<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:cnb_iconColor = "@color/primary_color"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_dashboard_black_24dp"
        app:cnb_iconColor = "@color/primary_color"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/profile_fragment"
        android:icon="@drawable/baseline_person_24"
        app:cnb_iconColor = "@color/primary_color"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_customFragment"
        android:icon="@drawable/editprofile"
        app:cnb_iconColor = "@color/primary_color"
        android:title="@string/custom_nav_title" />

</menu>