<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    >

    <!-- custom_dialog_layout.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/select_language"
            android:textSize="20sp"
            android:textColor="@color/black"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/languageRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:buttonTint="@color/orange"
                android:text="@string/english"
                android:textSize="18sp"
                />

            <RadioButton
                android:id="@+id/radioButtonMarathi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"
                android:text="@string/marathi" />
            <RadioButton
                android:id="@+id/radioButtonHindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:buttonTint="@color/orange"
                android:textSize="18sp"
                android:text="@string/hindi" />
            <!-- Add more language options here -->

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/primary_color"
           android:background="@drawable/filled_primary_rounded_bg"
            android:textColor="@color/white"
            android:text="@string/change_app_language" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>