<!-- res/layout/custom_dialog_layout.xml -->
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    android:elevation="10dp"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="15dp"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView2"
            android:layout_width="270dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            android:layout_marginTop="10dp"
            app:lottie_loop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/error" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai"
            android:text="@string/no_internet_connection"
            android:textColor="@color/primary_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/please_turn_on_your_internet_if_problem_persists_try_after_some_time"
            android:textColor="@color/font_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/filled_primary_rounded_bg"
            android:fontFamily="@font/baloo_bhai"
            android:paddingHorizontal="8dp"
            android:text="@string/retry"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:elevation="8dp"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
