<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.garudpuran.postermakerpro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_editPostFragment"
            app:destination="@id/editPostFragment" />
        <action
            android:id="@+id/action_navigation_home_to_profile_fragment"
            app:destination="@id/profile_fragment" />
        <action
            android:id="@+id/action_navigation_home_to_editStoryFragment"
            app:destination="@id/editStoryFragment" />
        <action
            android:id="@+id/action_navigation_home_to_selectedSubCatItems"
            app:destination="@id/selectedSubCatItems" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.garudpuran.postermakerpro.ui.dashboard.CategoriesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_navigation_dashboard_to_selectedSubCatItems"
            app:destination="@id/selectedSubCatItems" />
    </fragment>

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.garudpuran.postermakerpro.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_referFragment"
            app:destination="@id/referFragment" />
        <action
            android:id="@+id/action_profile_fragment_to_myProfilesFragment"
            app:destination="@id/myProfilesFragment" />
        <action
            android:id="@+id/action_profile_fragment_to_transactionHistoryFragment"
            app:destination="@id/transactionHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_customFragment"
        android:name="com.garudpuran.postermakerpro.ui.custom.CustomFragment"
        android:label="Custom"
        tools:layout="@layout/fragment_custom" />
    <fragment
        android:id="@+id/referFragment"
        android:name="com.garudpuran.postermakerpro.ui.ReferFragment"
        android:label="fragment_refer"
        tools:layout="@layout/fragment_refer" />
    <fragment
        android:id="@+id/myProfilesFragment"
        android:name="com.garudpuran.postermakerpro.ui.profile.MyProfilesFragment"
        android:label="fragment_my_profiles"
        tools:layout="@layout/fragment_my_profiles" />
    <fragment
        android:id="@+id/transactionHistoryFragment"
        android:name="com.garudpuran.postermakerpro.ui.transactionhistory.TransactionHistoryFragment"
        android:label="TransactionHistoryFragment" />
    <fragment
        android:id="@+id/editPostFragment"
        android:name="com.garudpuran.postermakerpro.ui.editing.EditPostFragment"
        android:label="EditPostFragment" >
        <argument
            android:name="catId"
            app:argType="string" />
        <argument
            android:name="subCatId"
            app:argType="string" />
        <argument
            android:name="postId"
            app:argType="string" />
        <argument
            android:name="imageUrl"
            app:argType="string" />

    </fragment>
    <fragment
        android:id="@+id/editStoryFragment"
        android:name="com.garudpuran.postermakerpro.ui.editing.EditStoryFragment"
        android:label="EditStoryFragment" />
    <fragment
        android:id="@+id/selectedSubCatItems"
        android:name="com.garudpuran.postermakerpro.ui.subcat.SelectedSubCatItemsFragment"
        android:label="SelectedSubCatItems" >
        <argument
            android:name="catId"
            app:argType="string" />
        <argument
            android:name="subCatId"
            app:argType="string" />
        <action
            android:id="@+id/action_selectedSubCatItems_to_editPostFragment"
            app:destination="@id/editPostFragment" />
    </fragment>
</navigation>